# scrapper

./: .env  ecosystem.config.json  jobs_v1.py  main.py  pyproject.toml
database/: __init__.py
greenhouse/: __init__.py  companies.csv  list.py
smartrecruiter/: __init__.py  all.py
workable/: __init__.py  all.py
